# pbs-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
pbs_utils/: __init__.py  aliases.sh  as_pbs_job.py
src/: __init__.py  as_pbs_job.py
src/pbs_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
