[build-system]
requires=["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-utils"
version = "0.0.1"
authors = [
	{name="Leonardo Baroncelli", email="leonardo.baroncelli26@gmail.com"}
]
description = ""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "pytest"
]
